After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 682007 - power: fix DBus path of gnome-screensaver
power: fix DBus path of gnome-screensaver
Status: RESOLVED FIXED
Product: gnome-settings-daemon
Classification: Core
Component: power
unspecified
Other All
: Normal normal
: ---
Assigned To: Richard Hughes
gnome-settings-daemon-maint
Depends on:
Blocks:
 
 
Reported: 2012-08-16 14:09 UTC by Giovanni Campagna
Modified: 2013-01-18 13:04 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
power: fix DBus path of gnome-screensaver (1.19 KB, patch)
2012-08-16 14:09 UTC, Giovanni Campagna
committed Details | Review

Description Giovanni Campagna 2012-08-16 14:09:53 UTC
The right path for both gnome-screensaver and gnome-shell is
/org/gnome/ScreenSaver. It was never noticed because the proxy
is created without properties and there is no callback in the
method calls.
Comment 1 Giovanni Campagna 2012-08-16 14:09:55 UTC
Created attachment 221377 [details] [review]
power: fix DBus path of gnome-screensaver
Comment 2 Bastien Nocera 2012-08-16 14:49:31 UTC
Review of attachment 221377 [details] [review]:

Correct, as seen in:
http://git.gnome.org/browse/gnome-screensaver/tree/src/bus.h?h=gnome-3-4#n49

Please commit to gnome-3-4 and master.
Comment 3 Giovanni Campagna 2012-08-16 14:56:29 UTC
Attachment 221377 [details] pushed as 031b33f - power: fix DBus path of gnome-screensaver
Comment 4 Martin Pitt 2013-01-18 13:00:28 UTC
Hm, was it really such a good idea to change the object path? Doesn't that break like every movie player outside which is currently trying to talk to object path "/" as it has used to be until 3.6?
Comment 5 Martin Pitt 2013-01-18 13:04:06 UTC
OK, seems d-feet fooled me. It seems gnome-screensaver responds to any arbitrary object path. Even "gdbus introspect -e -d org.gnome.ScreenSaver -o /moo/foo" works, at least in 3.6.