power: fix DBus path of gnome-screensaver

The right path for both gnome-screensaver and gnome-shell is
/org/gnome/ScreenSaver. It was never noticed because the proxy
is created without properties and there is no callback in the
method calls.

https://bugzilla.gnome.org/show_bug.cgi?id=682007